--- a/app/src/main/res/menu/admin_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/admin_bottom_nav_menu.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/nav_home"
-        android:icon="@drawable/ic_home"
-        android:title="Inicio" />
 
     <item
         android:id="@+id/nav_orders"
-        android:icon="@drawable/ic_orders"
+        android:icon="@drawable/ic_bell"
         android:title="Pedidos" />
 
     <item
         android:id="@+id/nav_products"
-        android:icon="@drawable/ic_products"
+        android:icon="@drawable/ic_product"
         android:title="Productos" />
 
     <item
