--- a/app/src/main/res/menu/cliente_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/cliente_bottom_nav_menu.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/nav_pedidos"
         android:title="Mis pedidos"
-        android:icon="@drawable/ic_orders" />
+        android:icon="@drawable/ic_bell" />
 
     <item
         android:id="@+id/nav_perfil"
