--- a/app/src/main/res/menu/empleado_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/empleado_bottom_nav_menu.xml
@@ -2,13 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/nav_inicio"
-        android:icon="@drawable/ic_home"
-        android:title="Inicio" />
-
-    <item
         android:id="@+id/nav_pedidos"
-        android:icon="@drawable/ic_orders"
+        android:icon="@drawable/ic_bell"
         android:title="Pedidos" />
 
     <item
