--- a/app/src/main/res/layout/activity_pantallaprincipalcliente.xml
+++ b/app/src/main/res/layout/activity_pantallaprincipalcliente.xml
@@ -24,7 +24,7 @@
 
     <!-- Contenedor de los fragments -->
     <FrameLayout
-        android:id="@+id/frameContainerCliente"
+        android:id="@+id/frameContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/tvAppName"
