--- a/app/src/main/res/layout/item_pedido_cliente.xml
+++ b/app/src/main/res/layout/item_pedido_cliente.xml
@@ -25,6 +25,7 @@
             android:textStyle="bold"
             android:layout_marginBottom="8dp" />
 
+
         <TextView
             android:id="@+id/tvProductosCliente"
             android:layout_width="match_parent"
@@ -44,5 +45,14 @@
             android:textStyle="bold"
             android:textSize="16sp"
             android:fontFamily="@font/baloo" />
+
+        <TextView
+            android:id="@+id/tvEstadoCliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Estado: Pendiente"
+            android:textColor="#E34A35"
+            android:textSize="16sp"
+            android:layout_marginTop="8dp"/>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
