cambios de tamaños

--- a/app/src/main/res/layout/activity_pantallaprincipalcliente.xml
+++ b/app/src/main/res/layout/activity_pantallaprincipalcliente.xml
@@ -22,6 +22,18 @@
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imgLogo"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/logo"
+        app:layout_constraintBottom_toBottomOf="@+id/tvAppName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tvAppName" />
+
     <!-- Contenedor de los fragments -->
     <FrameLayout
         android:id="@+id/frameContainer"
