--- a/app/src/main/res/layout/item_producto_pedido.xml
+++ b/app/src/main/res/layout/item_producto_pedido.xml
@@ -65,14 +65,14 @@
 
                 <ImageButton
                     android:id="@+id/btnRestar"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:backgroundTint="#F3B3CD"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:background="@drawable/rounded_button"
+                    android:backgroundTint="#F3B3CD"
                     android:src="@drawable/ic_remove"
                     android:contentDescription="Restar"
-                    app:tint="#F3B3CD"
-                    android:scaleType="centerInside" />
+                    android:scaleType="centerInside"
+                    app:tint="#FFFFFF" />
 
                 <TextView
                     android:id="@+id/tvCantidad"
@@ -87,14 +87,14 @@
 
                 <ImageButton
                     android:id="@+id/btnSumar"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:backgroundTint="#F3B3CD"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:background="@drawable/rounded_button"
+                    android:backgroundTint="#F3B3CD"
                     android:src="@drawable/ic_add"
                     android:contentDescription="Sumar"
-                    app:tint="#F3B3CD"
-                    android:scaleType="centerInside" />
+                    android:scaleType="centerInside"
+                    app:tint="#FFFFFF" />
             </LinearLayout>
 
             <Button
